--- a/src/RagadesCube/RagadesCube/RagadesCube-Win.csproj
+++ b/src/RagadesCube/RagadesCube/RagadesCube-Win.csproj
@@ -777,6 +777,13 @@
       <Name>RCSoundBank</Name>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Textures\RagadeSketch.png">
+      <XNAUseContentPipeline>true</XNAUseContentPipeline>
+      <Importer>TextureImporter</Importer>
+      <Processor>SpriteTextureProcessor</Processor>
+      <Name>RagadeSketch</Name>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="Content\Textures\BoringHollowArrowImage.xcf">
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>BoringHollowArrowImage</Name>
