Added new background for gameplay.

--- a/src/RagadesCube/RagadesCube/RagadesCube-Win.csproj
+++ b/src/RagadesCube/RagadesCube/RagadesCube-Win.csproj
@@ -777,6 +777,12 @@
       <Name>RCSoundBank</Name>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Textures\raw-starfield.jpg">
+      <XNAUseContentPipeline>true</XNAUseContentPipeline>
+      <Importer>TextureImporter</Importer>
+      <Processor>SpriteTextureProcessor</Processor>
+      <Name>raw-starfield</Name>
+    </Content>
     <Content Include="Content\Textures\RagadeSketch.png">
       <XNAUseContentPipeline>true</XNAUseContentPipeline>
       <Importer>TextureImporter</Importer>
