--- a/RC.Input/RC.Input/RC.Input.csproj
+++ b/RC.Input/RC.Input/RC.Input.csproj
@@ -1,18 +1,18 @@
 ﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <ProjectGuid>{16B5B08A-BF3A-4B2B-87A4-5AFE0C15681C}</ProjectGuid>
-    <ProjectTypeGuids>{9F340DF3-2AED-4330-AC16-78AC2D9B4738};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <ProjectGuid>{47DAF02C-B114-48F2-B55A-9ED01FDD009A}</ProjectGuid>
+    <ProjectTypeGuids>{6D335F3A-9D43-41b4-9D22-F6F17C4BE596};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RC.Input</RootNamespace>
-    <AssemblyName>RC.Input</AssemblyName>
-    <XnaFrameworkVersion>v1.0</XnaFrameworkVersion>
+    <RootNamespace>RC.Engine</RootNamespace>
+    <AssemblyName>RC.Engine</AssemblyName>
+    <XnaFrameworkVersion>v2.0</XnaFrameworkVersion>
     <XnaPlatform>Windows</XnaPlatform>
-    <XNAGlobalContentPipelineAssemblies>Microsoft.Xna.Framework.Content.Pipeline.EffectImporter.dll;Microsoft.Xna.Framework.Content.Pipeline.FBXImporter.dll;Microsoft.Xna.Framework.Content.Pipeline.TextureImporter.dll;Microsoft.Xna.Framework.Content.Pipeline.XImporter.dll</XNAGlobalContentPipelineAssemblies>
-    <XNAProjectContentPipelineAssemblies>
-    </XNAProjectContentPipelineAssemblies>
+    <XnaCrossPlatformGroupID>79e286a1-3f60-4219-a4c1-b5153acb2f25</XnaCrossPlatformGroupID>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -38,97 +38,50 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Xna.Framework">
+    <Reference Include="Microsoft.Xna.Framework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=6d5c3888ef60e27d, processorArchitecture=x86">
       <Private>False</Private>
+      <SpecificVersion>True</SpecificVersion>
     </Reference>
-    <Reference Include="Microsoft.Xna.Framework.Game">
+    <Reference Include="Microsoft.Xna.Framework.Game, Version=2.0.0.0, Culture=neutral, PublicKeyToken=6d5c3888ef60e27d, processorArchitecture=MSIL">
       <Private>False</Private>
+      <SpecificVersion>True</SpecificVersion>
     </Reference>
     <Reference Include="mscorlib">
       <Private>False</Private>
-    </Reference>
-    <Reference Include="RC.Engine, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Dependencies\x86\RC.Engine.dll</HintPath>
     </Reference>
     <Reference Include="System">
       <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Events\Event.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>Event</Name>
-    </Compile>
-    <Compile Include="Events\KeyboardEvent.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>KeyboardEvent</Name>
-    </Compile>
-    <Compile Include="Events\MouseEvent.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>MouseEvent</Name>
-    </Compile>
-    <Compile Include="Events\XBox360GamePadEvent.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>XBox360GamePadEvent</Name>
-    </Compile>
-    <Compile Include="Internal\RealKeyboardState.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>RealKeyboardState</Name>
-    </Compile>
-    <Compile Include="Internal\RealMouseState.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>RealMouseState</Name>
-    </Compile>
-    <Compile Include="Internal\RealXBoxGamePad.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>RealXBoxGamePad</Name>
-    </Compile>
+    <Compile Include="Events\Event.cs" />
+    <Compile Include="Events\KeyboardEvent.cs" />
+    <Compile Include="Events\MouseEvent.cs" />
+    <Compile Include="Events\XBox360GamePadEvent.cs" />
+    <Compile Include="Internal\RealKeyboardState.cs" />
+    <Compile Include="Internal\RealMouseState.cs" />
+    <Compile Include="Internal\RealXBoxGamePad.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Scheme.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>Scheme</Name>
-    </Compile>
-    <Compile Include="Types\EventTypes.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>EventTypes</Name>
-    </Compile>
-    <Compile Include="Types\InputType.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>InputType</Name>
-    </Compile>
-    <Compile Include="Types\MouseButtonTypes.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>MouseButtonTypes</Name>
-    </Compile>
-    <Compile Include="Types\MouseInput.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>MouseInput</Name>
-    </Compile>
-    <Compile Include="Types\XBox360GamePadTypes.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>XBox360GamePadTypes</Name>
-    </Compile>
-    <Compile Include="Watchers\KeyboardWatcher.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>KeyboardWatcher</Name>
-    </Compile>
-    <Compile Include="Watchers\MouseWatcher.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>MouseWatcher</Name>
-    </Compile>
-    <Compile Include="Watchers\Watcher.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>Watcher</Name>
-    </Compile>
-    <Compile Include="Watchers\XBox360GamePadWatcher.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>XBox360GamePadWatcher</Name>
-    </Compile>
+    <Compile Include="Scheme.cs" />
+    <Compile Include="Types\EventTypes.cs" />
+    <Compile Include="Types\InputType.cs" />
+    <Compile Include="Types\MouseButtonTypes.cs" />
+    <Compile Include="Types\MouseInput.cs" />
+    <Compile Include="Types\XBox360GamePadTypes.cs" />
+    <Compile Include="Watchers\KeyboardWatcher.cs" />
+    <Compile Include="Watchers\MouseWatcher.cs" />
+    <Compile Include="Watchers\Watcher.cs" />
+    <Compile Include="Watchers\XBox360GamePadWatcher.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <NestedContentProject Include="Content\Content.contentproj">
+      <Project>f124833a-9fcb-46b7-9e43-6b8b5cbaa837</Project>
+      <Visible>False</Visible>
+    </NestedContentProject>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA\Game Studio Express\v1.0\Microsoft.Xna.ContentPipeline.targets" />
-  <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA\Game Studio Express\v1.0\Microsoft.Xna.Common.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\v2.0\Microsoft.Xna.GameStudio.Common.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\v2.0\Microsoft.Xna.GameStudio.NestedContent.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
@@ -136,7 +89,4 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <PropertyGroup>
-    <PostBuildEvent>xcopy "$(ProjectDir)$(OutDir)*" "$(ProjectDir)..\..\Dependencies\x86"  /i /d /y</PostBuildEvent>
-  </PropertyGroup>
 </Project>
