--- a/RagadesCube/RagadesCube/RagadesCube-Win.csproj
+++ b/RagadesCube/RagadesCube/RagadesCube-Win.csproj
@@ -18,7 +18,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\x86\Debug</OutputPath>
+    <OutputPath>..\..\bin\x86\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -29,7 +29,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\x86\Release</OutputPath>
+    <OutputPath>..\..\bin\x86\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -109,6 +109,23 @@
       <Project>54f6ab80-5bc6-4784-93a6-23ba11246383</Project>
       <Visible>False</Visible>
     </NestedContentProject>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\RC.Engine\RC.Engine\RC.Engine.csproj">
+      <Project>{47DAF02C-B114-48F2-B55A-9ED01FDD009A}</Project>
+      <Name>RC.Engine</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\..\RC.Gui\RC.Gui\RC.Gui.csproj">
+      <Project>{A6C11525-E401-4105-8DE9-481DC503176C}</Project>
+      <Name>RC.Gui</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\..\RC.Input\RC.Input\RC.Input.csproj">
+      <Project>{46102AE9-ABF0-4DBC-A806-51DE72554741}</Project>
+      <Name>RC.Input</Name>
+      <Private>False</Private>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\v2.0\Microsoft.Xna.GameStudio.Common.targets" />
