--- a/RC.Gui/RC.Gui/RC.Gui-Xbox360.csproj
+++ b/RC.Gui/RC.Gui/RC.Gui-Xbox360.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">Xbox 360</Platform>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RC.Gui_Xbox360</RootNamespace>
+    <RootNamespace>RC.Gui</RootNamespace>
     <AssemblyName>RC.Gui-Xbox360</AssemblyName>
     <XnaFrameworkVersion>v2.0</XnaFrameworkVersion>
     <XnaPlatform>Xbox 360</XnaPlatform>
@@ -16,7 +16,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Xbox 360\Debug</OutputPath>
+    <OutputPath>..\..\bin\Xbox 360\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE;XBOX;XBOX360</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -26,7 +26,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|Xbox 360' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Xbox 360\Release</OutputPath>
+    <OutputPath>..\..\bin\Xbox 360\Release\</OutputPath>
     <DefineConstants>TRACE;XBOX;XBOX360</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -46,6 +46,7 @@
     <Reference Include="System">
       <Private>False</Private>
     </Reference>
+    <Reference Include="system.xml, Version=3.5.0.0, Culture=neutral, PublicKeyToken=1c9e259686f921e0, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controls\Control Subclasses\RCButton.cs" />
@@ -81,6 +82,18 @@
       <Project>eeaf6a6e-856b-47a4-9a5d-2e1dbb3c8273</Project>
       <Visible>False</Visible>
     </NestedContentProject>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\RC.Engine\RC.Engine\RC.Engine-Xbox360.csproj">
+      <Project>{0554B36D-EC1B-47CC-B0ED-67399BDE92ED}</Project>
+      <Name>RC.Engine-Xbox360</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\..\RC.Input\RC.Input\RC.Input-Xbox360.csproj">
+      <Project>{3F22A5ED-2F68-4D6B-B36C-F2E44C9F4314}</Project>
+      <Name>RC.Input-Xbox360</Name>
+      <Private>False</Private>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\v2.0\Microsoft.Xna.GameStudio.Common.targets" />
